--- a/app/src/main/res/layout/activity_exit.xml
+++ b/app/src/main/res/layout/activity_exit.xml
@@ -98,7 +98,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/quit"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
@@ -111,7 +111,7 @@
         android:layout_marginTop="@dimen/less_padding"
         android:gravity="center"
         android:text="@string/do_you_really_want_to_quit"
-        android:textColor="@color/gray_400"
+        android:textColor="@color/gray_700"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@id/llBtn"
         app:layout_constraintStart_toStartOf="parent"
