--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -32,7 +32,7 @@
             android:paddingVertical="@dimen/padding"
             android:paddingEnd="@dimen/padding"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-            app:tint="@color/white" />
+            app:tint="?attr/colorSecondary" />
 
         <TextView
             android:layout_width="0dp"
@@ -40,7 +40,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/settings"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorSecondary"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -69,28 +69,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvUpgradeToPremium"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/fab_padding"
-                android:layout_marginTop="@dimen/padding_10"
-                android:background="@drawable/ic_bg_pro_yellow"
-                android:elevation="@dimen/padding_10"
-                android:gravity="center_vertical"
-                android:paddingHorizontal="@dimen/fab_padding"
-                android:paddingVertical="@dimen/padding"
-                android:drawablePadding="@dimen/padding"
-                android:text="@string/upgrade_to_pro"
-                android:textColor="@color/btnTextColor"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
-                app:drawableStartCompat="@drawable/ic_crown"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
-
             <LinearLayout
                 android:id="@+id/llShareApp"
                 android:layout_width="match_parent"
@@ -98,7 +76,6 @@
                 android:layout_marginHorizontal="@dimen/fab_padding"
                 android:layout_marginTop="@dimen/padding"
                 android:background="@drawable/bg_main_less_rounded"
-                android:backgroundTint="@color/colorSecondary"
                 android:elevation="2dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -118,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/share_app"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorSecondary"
                     android:textSize="16sp"
                     app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
                     android:drawableTint="@color/accent"
@@ -133,7 +110,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/fab_padding"
                 android:layout_marginTop="@dimen/padding"
-                android:backgroundTint="@color/colorSecondary"
                 android:background="@drawable/bg_main_less_rounded"
                 android:elevation="2dp"
                 android:gravity="center_vertical"
@@ -153,7 +129,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/feedback"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorSecondary"
                     android:textSize="16sp"
                     android:drawableTint="@color/accent"
                     app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
@@ -167,7 +143,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/fab_padding"
-                android:backgroundTint="@color/colorSecondary"
                 android:layout_marginTop="@dimen/padding"
                 android:background="@drawable/bg_main_less_rounded"
                 android:elevation="2dp"
@@ -188,7 +163,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/rate_us"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorSecondary"
                     android:drawableTint="@color/accent"
                     android:textSize="16sp"
                     app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
@@ -212,7 +187,6 @@
                 android:id="@+id/llPrivacyPolicy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorSecondary"
                 android:layout_marginHorizontal="@dimen/fab_padding"
                 android:layout_marginTop="@dimen/padding"
                 android:background="@drawable/bg_main_less_rounded"
@@ -234,7 +208,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/privacy_policy"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorSecondary"
                     android:drawableTint="@color/accent"
                     android:textSize="16sp"
                     app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
@@ -251,7 +225,6 @@
                 android:layout_marginVertical="@dimen/padding"
                 android:background="@drawable/bg_main_less_rounded"
                 android:elevation="2dp"
-                android:backgroundTint="@color/colorSecondary"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingHorizontal="@dimen/fab_padding"
@@ -269,7 +242,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/terms_of_use"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorSecondary"
                     android:textSize="16sp"
                     android:drawableTint="@color/accent"
                     app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
