--- a/app/src/main/res/drawable-xhdpi/bg_dashboard_gradient_one.xml
+++ b/app/src/main/res/drawable-xhdpi/bg_dashboard_gradient_one.xml
@@ -1,18 +1,19 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/gray_700"
-    tools:targetApi="lollipop">
+    android:color="@color/gray_300">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray_700" />
-            <corners android:radius="7sp"/>
+            <solid android:color="@color/gray_300" />
+            <corners android:radius="7sp" />
         </shape>
     </item>
-    <item
-        android:id="@android:id/background" >
+    <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <gradient android:startColor="#E0E0E0" android:endColor="#FFFFFF" android:angle="45" android:type="linear"/>
-            <corners android:radius="7sp"/>
+            <gradient
+                android:angle="45"
+                android:endColor="#FFFFFF"
+                android:startColor="@color/secondary_color"
+                android:type="linear" />
+            <corners android:radius="7sp" />
         </shape>
     </item>
 </ripple>
