--- a/app/src/main/res/drawable/bg_main_rounded.xml
+++ b/app/src/main/res/drawable/bg_main_rounded.xml
@@ -1,24 +1,16 @@
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<shape xmlns:android="http://schemas.android.com/apk/res/android">-->
-<!--    <solid android:color="#f5f6fb" />-->
-<!--    <corners android:radius="50dp" />-->
-<!--</shape>-->
-
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/gray_700"
-    tools:targetApi="lollipop">
+    android:color="@color/gray_300">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray_700" />
-            <corners android:radius="50dp"/>
+            <solid android:color="@color/gray_300" />
+            <corners android:radius="50dp" />
         </shape>
     </item>
-    <item
-        android:id="@android:id/background" >
+    <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="@color/secondary_color"/>
-            <corners android:radius="50dp"/>
+            <solid android:color="@color/secondary_color" />
+            <corners android:radius="50dp" />
         </shape>
     </item>
 </ripple>
