--- a/app/src/main/res/layout/activity_display_history.xml
+++ b/app/src/main/res/layout/activity_display_history.xml
@@ -36,7 +36,7 @@
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingEnd="@dimen/less_padding"
                 app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="@color/white"
+                app:tint="?attr/colorSecondary"
                 android:contentDescription="@string/todo" />
 
             <TextView
@@ -45,7 +45,7 @@
                 android:layout_weight="1"
                 android:text="@string/history"
                 android:gravity="center"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorSecondary"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -53,7 +53,7 @@
                 android:id="@+id/btnFav"
                 android:layout_width="@dimen/icon_size"
                 android:layout_height="@dimen/icon_size"
-                app:tint="@color/white"
+                app:tint="?attr/colorSecondary"
                 android:background="@drawable/bg_nothing_rounded_ripple"
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingStart="@dimen/less_padding"
@@ -91,7 +91,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:paddingTop="@dimen/padding"
-                android:layout_margin="@dimen/fab_padding"
                 app:layout_constraintBottom_toTopOf="@+id/nativeAdFrameLayout"
                 app:layout_constraintTop_toTopOf="parent" />
 
