--- a/app/src/main/res/layout/activity_enable_keyboard.xml
+++ b/app/src/main/res/layout/activity_enable_keyboard.xml
@@ -14,7 +14,7 @@
         android:layout_margin="@dimen/extra_padding"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/bg_main_less_rounded"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/secondary_color"
         app:layout_constraintBottom_toBottomOf="parent"
         android:elevation="@dimen/padding_10">
 
@@ -26,7 +26,7 @@
             android:layout_marginHorizontal="@dimen/fab_padding"
             android:gravity="center"
             android:text="Translator Pro Keyboard"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="@dimen/_18sdp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
