--- a/app/src/main/res/layout/activity_phrases.xml
+++ b/app/src/main/res/layout/activity_phrases.xml
@@ -29,7 +29,7 @@
             android:scaleType="fitCenter"
             android:transitionName="anim_btn_menu"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-            app:tint="@color/white" />
+            app:tint="?attr/colorSecondary" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clLanguages"
@@ -56,7 +56,7 @@
                     android:fontFamily="@font/sf_pro_regular"
                     android:padding="@dimen/padding"
                     android:text="@string/english"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorSecondary"
                     android:textSize="@dimen/_12sdp" />
 
                 <ImageView
@@ -104,7 +104,7 @@
                     android:fontFamily="@font/sf_pro_regular"
                     android:padding="@dimen/padding"
                     android:text="@string/english"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorSecondary"
                     android:textSize="@dimen/_12sdp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -120,7 +120,7 @@
             android:padding="@dimen/less_padding"
             android:visibility="invisible"
             app:srcCompat="@drawable/ic_baseline_access_time_filled_24"
-            app:tint="@color/white" />
+            app:tint="?attr/colorSecondary" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
