--- a/app/src/main/res/layout/admob_native_dashboard.xml
+++ b/app/src/main/res/layout/admob_native_dashboard.xml
@@ -13,12 +13,11 @@
             android:id="@+id/top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="@dimen/_2sdp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:orientation="horizontal"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/ad_app_icon"
@@ -49,9 +48,9 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLength="25"
-                    android:text="@string/app_name"
                     android:maxLines="1"
-                    android:textColor="@color/white"
+                    android:text="@string/app_name"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
@@ -107,9 +106,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_50sdp"
                 android:backgroundTint="@color/blue"
-                android:text="Install"
                 android:gravity="center"
                 android:letterSpacing="0.1"
+                android:text="Install"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13sdp" />
         </LinearLayout>
