--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/less_padding">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
+        android:layout_marginHorizontal="@dimen/fab_padding"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -29,7 +29,7 @@
             android:layout_marginHorizontal="@dimen/less_padding"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/ic_baseline_navigate_next_24"
-            app:tint="@color/white" />
+            app:tint="?attr/colorSecondary" />
 
         <TextView
             android:id="@+id/tvLngToHistory"
@@ -39,15 +39,17 @@
             android:textColor="@color/accent" />
     </LinearLayout>
 
-
     <LinearLayout
         android:id="@+id/llMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/fab_padding"
         android:background="@drawable/bg_main_less_rounded"
         android:orientation="vertical"
-        android:backgroundTint="@color/colorSecondary"
+        android:layout_marginBottom="@dimen/padding"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:padding="@dimen/less_padding"
+        android:elevation="@dimen/less_padding"
         app:layout_constraintTop_toBottomOf="@+id/ll">
 
         <TextView
@@ -57,6 +59,7 @@
             android:paddingStart="@dimen/padding_10"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
+            android:text="@string/app_name"
             android:textColor="@color/accent"
             android:textSize="18sp"
             tools:ignore="RtlSymmetry" />
@@ -74,7 +77,7 @@
                 android:paddingStart="@dimen/padding_10"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorSecondary"
                 android:textSize="16sp"
                 tools:ignore="RtlSymmetry" />
 
@@ -141,14 +144,5 @@
 
 
     </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/nativeAdFrameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_220sdp"
-        android:layout_marginVertical="@dimen/padding"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/llMain" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
