--- a/app/src/main/res/layout/languages_list.xml
+++ b/app/src/main/res/layout/languages_list.xml
@@ -33,7 +33,7 @@
             android:text="@string/textview"
             android:gravity="center_vertical"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorSecondary"
             android:paddingVertical="@dimen/fab_padding" />
 
         <TextView
@@ -67,7 +67,7 @@
             android:paddingHorizontal="@dimen/less_padding"
             android:background="@drawable/bg_nothing_rounded_ripple"
             android:src="@drawable/ic_speak_ic"
-            app:tint="@color/white" />
+            app:tint="?attr/colorSecondary" />
 
     </LinearLayout>
 
