--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/padding"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,9 +12,12 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
         android:paddingVertical="@dimen/padding"
         android:paddingHorizontal="@dimen/fab_padding"
-        android:backgroundTint="@color/colorSecondary"
+        android:elevation="@dimen/less_padding"
+        android:layout_marginVertical="@dimen/less_padding"
+        android:layout_marginHorizontal="@dimen/fab_padding"
         android:background="@drawable/bg_main_less_rounded">
 
         <ImageView
@@ -35,7 +37,7 @@
             android:textColor="@color/accent"
             android:textSize="@dimen/_11sdp"
             app:layout_constraintStart_toEndOf="@+id/imgItemIcon"
-            app:layout_constraintTop_toTopOf="parent"
+            android:elevation="@dimen/less_padding"
             app:layout_constraintBottom_toBottomOf="parent"
             android:paddingTop="10dp"
             android:paddingBottom="10dp" />
