--- a/app/src/main/res/layout/phrase_book_main_item.xml
+++ b/app/src/main/res/layout/phrase_book_main_item.xml
@@ -14,7 +14,6 @@
         android:background="@drawable/bg_main_less_rounded"
         android:layout_marginBottom="@dimen/padding"
         android:paddingHorizontal="@dimen/fab_padding"
-        android:backgroundTint="@color/colorSecondary"
         app:layout_constraintBottom_toTopOf="@id/nativeAdFrameLayout"
         android:paddingVertical="@dimen/padding">
 
@@ -34,7 +33,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/padding_10"
             android:text="@string/app_name"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/imgPhraseMainItemIcon"
