Working on clipboard.

--- a/app/src/main/res/layout/clipboard_history_view.xml
+++ b/app/src/main/res/layout/clipboard_history_view.xml
@@ -21,7 +21,7 @@
         <org.dslul.openboard.inputmethod.keyboard.clipboard.ClipboardHistoryRecyclerView
                 android:id="@+id/clipboard_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_280sdp"
                 android:orientation="vertical"/>
 
     </FrameLayout>
