--- a/app/src/main/res/layout/clipboard_entry_key.xml
+++ b/app/src/main/res/layout/clipboard_entry_key.xml
@@ -1,30 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingEnd="@dimen/padding"
+    android:layout_margin="@dimen/less_padding"
+    android:paddingVertical="@dimen/less_padding"
+    android:background="@color/color_nothing"
+    android:animateLayoutChanges="true"
+    android:orientation="horizontal">
 
     <ImageView
-            android:id="@+id/clipboard_entry_pinned_icon"
-            android:layout_width="@dimen/config_clipboard_pinned_icon_size"
-            android:layout_height="@dimen/config_clipboard_pinned_icon_size"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="4dp"/>
+        android:id="@+id/clipboard_entry_pinned_icon"
+        android:layout_width="@dimen/config_clipboard_pinned_icon_size"
+        android:layout_height="@dimen/config_clipboard_pinned_icon_size"
+        android:src="@drawable/ic_outline_push_pin_24"
+        android:paddingHorizontal="@dimen/less_padding" />
 
-    <!-- Provide audio and haptic feedback by ourselves based on the keyboard settings.
-         We just need to ignore the system's audio and haptic feedback settings. -->
-    <TextView
-            android:id="@+id/clipboard_entry_content"
-            android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/ll_clipboard_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="6dp"
-            android:layout_marginHorizontal="8dp"
-            android:hapticFeedbackEnabled="false"
-            android:soundEffectsEnabled="false"
-            android:ellipsize="end"
-            android:maxLines="4"/>
+            android:background="@drawable/bg_nothing_ripple_padding_rounded"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Copied text"
+                android:textColor="@color/gray_600"
+                android:textSize="11sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/clipboard_entry_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:hapticFeedbackEnabled="false"
+                    android:maxLines="4"
+                    android:soundEffectsEnabled="false"
+                    android:text="@string/app_name"
+                    android:textColor="@color/gray_800" />
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/bg_nothing_ripple_padding_rounded"
+                    android:padding="@dimen/less_padding"
+                    android:tint="@color/accent"
+                    android:src="@drawable/ic_send_clipboard_text" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginHorizontal="@dimen/padding"
+            android:background="@color/gray_400" />
+
+        <LinearLayout
+            android:id="@+id/llTranslatedContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding"
+            android:background="@drawable/bg_nothing_ripple_padding_rounded"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textLngFrom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/english"
+                    android:textColor="@color/gray_600"
+                    android:textSize="11sp" />
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_marginHorizontal="@dimen/less_padding"
+                    android:src="@drawable/ic_baseline_navigate_next_24"
+                    app:tint="@color/accent" />
+
+                <TextView
+                    android:id="@+id/textLngTo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/english"
+                    android:textColor="@color/gray_600"
+                    android:textSize="11sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/clipboard_translated_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:hapticFeedbackEnabled="false"
+                    android:maxLines="4"
+                    android:layout_weight="1"
+                    android:soundEffectsEnabled="false"
+                    android:textColor="@color/gray_800" />
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/bg_nothing_ripple_padding_rounded"
+                    android:tint="@color/accent"
+                    android:padding="@dimen/less_padding"
+                    android:src="@drawable/ic_send_clipboard_text" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding"
+            app:shimmer_auto_start="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/english"
+                        android:textColor="@color/gray_600"
+                        android:background="@color/gray_600"
+                        android:textSize="11sp" />
+
+                    <ImageView
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:layout_marginHorizontal="@dimen/padding"
+                        android:src="@drawable/ic_baseline_navigate_next_24"
+                        app:tint="@color/gray_600" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/english"
+                        android:background="@color/gray_600"
+                        android:textColor="@color/gray_600"
+                        android:textSize="11sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:background="@color/gray_600"
+                        android:hapticFeedbackEnabled="false"
+                        android:maxLines="4"
+                        android:layout_weight="1"
+                        android:soundEffectsEnabled="false"
+                        android:textColor="@color/gray_800" />
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:background="@drawable/bg_nothing_ripple_padding_rounded"
+                        android:tint="@color/accent"
+                        android:padding="@dimen/less_padding"
+                        android:src="@drawable/ic_send_clipboard_text" />
+                </LinearLayout>
+            </LinearLayout>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+
+    </LinearLayout>
+
 
 </LinearLayout>
