--- a/app/src/main/res/layout/admob_native_layout_lctr.xml
+++ b/app/src/main/res/layout/admob_native_layout_lctr.xml
@@ -57,7 +57,7 @@
                     android:ellipsize="end"
                     android:maxLength="25"
                     android:maxLines="1"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@id/ad_body"
@@ -73,7 +73,7 @@
                     android:ellipsize="end"
                     android:maxLength="99"
                     android:maxLines="2"
-                    android:textColor="@color/gray_400"
+                    android:textColor="@color/gray_700"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@id/ad_app_icon"
