--- a/app/src/main/res/layout/admob_small_native_ad_hctr.xml
+++ b/app/src/main/res/layout/admob_small_native_ad_hctr.xml
@@ -62,7 +62,7 @@
                     android:layout_marginStart="@dimen/padding"
                     android:maxLines="1"
                     android:text="@string/app_name"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
                     android:lines="1"
                     android:layout_marginTop="@dimen/padding"
                     android:text="@string/appbar_scrolling_view_behavior"
-                    android:textColor="@color/gray_400"
+                    android:textColor="@color/gray_700"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
