--- a/app/src/main/res/layout/admob_small_native_ad_lctr.xml
+++ b/app/src/main/res/layout/admob_small_native_ad_lctr.xml
@@ -82,7 +82,7 @@
                         android:singleLine="true"
                         android:text="@string/app_name"
                         android:paddingEnd="@dimen/_6sdp"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:textSize="@dimen/_11sdp"
                         android:textStyle="bold" />
 
