--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -118,6 +118,7 @@
 
     <color name="black">#121212</color>
     <color name="accent">#5BC467</color>
+    <color name="gray_suggestion_strip_button_color">#7F7F7F</color>
     <color name="orange">#9CCC65</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_900">#212121</color>
@@ -135,11 +136,11 @@
 
     <color name="bg_color">#FFFFFF</color>
     <color name="yellow">#4285F4</color>
-    <color name="disable_color">#424242</color>
+    <color name="disable_color">#EEEEEE</color>
     <color name="secondary_color">#f5f6fb</color>
 
     <color name="btnColor">#BDBDBD</color>
-    <color name="colorPrimary">#192024</color>
+    <color name="colorPrimary">#f8fdf9</color>
     <color name="colorSecondary">#991e272b</color>
     <color name="line_color">#373e41</color>
     <color name="gray_300">#E0E0E0</color>
